# test-python-grpc-multi

./: .gitignore  Dockerfile  README.md  client.py  consts.py  entrypoint.sh  fly.toml  ml_server_pb2.py  ml_server_pb2.pyi  ml_server_pb2_grpc.py  post-initialization.sh  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy-on-merge-to-main.yml
